// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should render in horizontal mode with 3 steps 1`] = `
.c3.btn-info {
  background-color: #7894ce;
  border-color: #0063be;
  color: rgb(250,251,253);
  -webkit-transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
}

.c3.btn-info:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c3.btn-info.active {
  background-color: #0063be;
  border-color: #0057a8;
  color: rgb(249,250,252);
}

.c3.btn-info.active:hover {
  background-color: #0057a8;
  border-color: #00427f;
  color: rgb(249,249,251);
}

.c3.btn-info[disabled],
.c3.btn-info.disabled {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
  cursor: not-allowed;
}

.c3.btn-info[disabled]:hover,
.c3.btn-info.disabled:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c4.nav > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.c4.nav > li > a:hover,
.c4.nav > li > a:focus {
  background-color: #f3f3f3;
}

.c4.nav > li.disabled > a {
  color: #a6a6a6;
}

.c4.nav > li.disabled > a:hover,
.c4.nav > li.disabled > a:focus {
  color: #a6a6a6;
}

.c4.nav .open > a,
.c4.nav .open > a:hover,
.c4.nav .open > a:focus {
  background-color: #f3f3f3;
  border-color: #702785;
}

.c4.nav.nav-pills > li.active > a,
.c4.nav.nav-pills > li.active > a:hover,
.c4.nav.nav-pills > li.active > a:focus {
  color: #fff;
  background-color: #702785;
}

.c4.nav .nav-tabs {
  border-bottom-color: rgb(198,207,231);
}

.c4.nav .nav-tabs > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #1f1f1f;
  border-color: #f3f3f3 #f3f3f3 rgb(198,207,231);
}

.c4.nav .nav-tabs > li > a:hover {
  background-color: #f3f3f3;
  color: #1f1f1f;
}

.c4.nav .nav-tabs > li.active > a,
.c4.nav .nav-tabs > li.active > a:hover,
.c4.nav .nav-tabs > li.active > a:focus {
  color: #1f1f1f;
  background-color: #ffffff;
  border-color: rgb(198,207,231);
  border-bottom-color: transparent;
}

.c4.nav .nav-tabs > li.disabled > a,
.c4.nav .nav-tabs > li.disabled > a:hover,
.c4.nav .nav-tabs > li.disabled > a:focus {
  color: #9b9b9b;
  background-color: #ffffff;
  border-color: #ffffff #ffffff rgb(198,207,231);
  cursor: not-allowed;
}

.c4.nav.nav-justified > .active > a,
.c4.nav.nav-justified > .active > a:hover,
.c4.nav.nav-justified > .active > a:focus {
  border-color: rgb(198,207,231);
}

.c0.content {
  background-color: #fff;
  border: 1px solid #cdcdcd;
  margin-bottom: 9px;
  border-radius: 4px;
}

.c1 {
  margin-bottom: 15px;
}

.c2 {
  padding: 7px;
}

@media (min-width:768px) {
  .c4.nav.nav-justified > li > a {
    border-bottom-color: rgb(198,207,231);
  }

  .c4.nav.nav-justified > .active > a,
  .c4.nav.nav-justified > .active > a:hover,
  .c4.nav.nav-justified > .active > a:focus {
    border-bottom-color: #ffffff;
  }
}

<Wizard
  NavigationComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "STYLES": Array [
        "tabs",
        "pills",
      ],
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "baseHash": -110015796,
        "componentId": "Nav-dzawzr-0",
        "isStatic": false,
        "rules": Array [
          [Function],
        ],
        "staticRulesId": "",
      },
      "displayName": "Nav",
      "foldedComponentIds": Array [],
      "render": [Function],
      "shouldForwardProp": undefined,
      "styledComponentId": "Nav-dzawzr-0",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  containerClassName="content"
  hidePreviousNextButtons={false}
  horizontal={true}
  justified={false}
  onStepChange={[Function]}
  steps={
    Array [
      Object {
        "component": <div>
          Component1
        </div>,
        "key": "Key1",
        "title": "Title1",
      },
      Object {
        "component": <div>
          Component2
        </div>,
        "key": "Key2",
        "title": "Title2",
      },
      Object {
        "component": <div>
          Component3
        </div>,
        "key": "Key3",
        "title": "Title3",
      },
    ]
  }
>
  <Row
    className="content"
  >
    <Row
      bsClass="row"
      className="c0 content"
      componentClass="div"
    >
      <div
        className="c0 content row"
      >
        <Wizard__HorizontalCol
          sm={12}
        >
          <Col
            bsClass="col"
            className="c1"
            componentClass="div"
            sm={12}
          >
            <div
              className="c1 col-sm-12"
            >
              <div
                className="pull-right"
              >
                <Wizard__HorizontalButtonToolbar>
                  <ButtonToolbar
                    bsClass="btn-toolbar"
                    className="c2"
                  >
                    <div
                      className="c2 btn-toolbar"
                      role="toolbar"
                    >
                      <Button
                        bsSize="xsmall"
                        bsStyle="info"
                        disabled={true}
                        onClick={[Function]}
                      >
                        <Button
                          active={false}
                          block={false}
                          bsClass="btn"
                          bsSize="xsmall"
                          bsStyle="info"
                          className="c3"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <button
                            className="c3 btn btn-xs btn-info"
                            disabled={true}
                            onClick={[Function]}
                            type="button"
                          >
                            <Icon
                              name="caret-left"
                              type="solid"
                            >
                              <FontAwesomeIcon
                                icon={
                                  Object {
                                    "iconName": "caret-left",
                                    "prefix": "fas",
                                  }
                                }
                              >
                                <svg
                                  className="svg-inline--fa fa-caret-left"
                                />
                              </FontAwesomeIcon>
                            </Icon>
                          </button>
                        </Button>
                      </Button>
                      <Button
                        bsSize="xsmall"
                        bsStyle="info"
                        onClick={[Function]}
                      >
                        <Button
                          active={false}
                          block={false}
                          bsClass="btn"
                          bsSize="xsmall"
                          bsStyle="info"
                          className="c3"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <button
                            className="c3 btn btn-xs btn-info"
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            <Icon
                              name="caret-right"
                              type="solid"
                            >
                              <FontAwesomeIcon
                                icon={
                                  Object {
                                    "iconName": "caret-right",
                                    "prefix": "fas",
                                  }
                                }
                              >
                                <svg
                                  className="svg-inline--fa fa-caret-right"
                                />
                              </FontAwesomeIcon>
                            </Icon>
                          </button>
                        </Button>
                      </Button>
                    </div>
                  </ButtonToolbar>
                </Wizard__HorizontalButtonToolbar>
              </div>
              <Nav
                activeKey="Key1"
                bsStyle="pills"
                justified={false}
                onSelect={[Function]}
              >
                <Nav
                  activeKey="Key1"
                  bsClass="nav"
                  bsStyle="pills"
                  className="c4"
                  justified={false}
                  onSelect={[Function]}
                  pullLeft={false}
                  pullRight={false}
                  stacked={false}
                >
                  <ul
                    className="c4 nav nav-pills"
                    role={null}
                  >
                    <NavItem
                      active={true}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key1"
                      key=".$Key1"
                      onSelect={[Function]}
                    >
                      <li
                        className="active"
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title1
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key2"
                      key=".$Key2"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title2
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key3"
                      key=".$Key3"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title3
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                  </ul>
                </Nav>
              </Nav>
            </div>
          </Col>
        </Wizard__HorizontalCol>
        <Col
          bsClass="col"
          componentClass="div"
          md={12}
        >
          <div
            className="col-md-12"
          >
            <div>
              Component1
            </div>
          </div>
        </Col>
      </div>
    </Row>
  </Row>
</Wizard>
`;

exports[`<Wizard /> should render in horizontal mode with 3 steps and children 1`] = `
.c3.btn-info {
  background-color: #7894ce;
  border-color: #0063be;
  color: rgb(250,251,253);
  -webkit-transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
}

.c3.btn-info:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c3.btn-info.active {
  background-color: #0063be;
  border-color: #0057a8;
  color: rgb(249,250,252);
}

.c3.btn-info.active:hover {
  background-color: #0057a8;
  border-color: #00427f;
  color: rgb(249,249,251);
}

.c3.btn-info[disabled],
.c3.btn-info.disabled {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
  cursor: not-allowed;
}

.c3.btn-info[disabled]:hover,
.c3.btn-info.disabled:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c4.nav > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.c4.nav > li > a:hover,
.c4.nav > li > a:focus {
  background-color: #f3f3f3;
}

.c4.nav > li.disabled > a {
  color: #a6a6a6;
}

.c4.nav > li.disabled > a:hover,
.c4.nav > li.disabled > a:focus {
  color: #a6a6a6;
}

.c4.nav .open > a,
.c4.nav .open > a:hover,
.c4.nav .open > a:focus {
  background-color: #f3f3f3;
  border-color: #702785;
}

.c4.nav.nav-pills > li.active > a,
.c4.nav.nav-pills > li.active > a:hover,
.c4.nav.nav-pills > li.active > a:focus {
  color: #fff;
  background-color: #702785;
}

.c4.nav .nav-tabs {
  border-bottom-color: rgb(198,207,231);
}

.c4.nav .nav-tabs > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #1f1f1f;
  border-color: #f3f3f3 #f3f3f3 rgb(198,207,231);
}

.c4.nav .nav-tabs > li > a:hover {
  background-color: #f3f3f3;
  color: #1f1f1f;
}

.c4.nav .nav-tabs > li.active > a,
.c4.nav .nav-tabs > li.active > a:hover,
.c4.nav .nav-tabs > li.active > a:focus {
  color: #1f1f1f;
  background-color: #ffffff;
  border-color: rgb(198,207,231);
  border-bottom-color: transparent;
}

.c4.nav .nav-tabs > li.disabled > a,
.c4.nav .nav-tabs > li.disabled > a:hover,
.c4.nav .nav-tabs > li.disabled > a:focus {
  color: #9b9b9b;
  background-color: #ffffff;
  border-color: #ffffff #ffffff rgb(198,207,231);
  cursor: not-allowed;
}

.c4.nav.nav-justified > .active > a,
.c4.nav.nav-justified > .active > a:hover,
.c4.nav.nav-justified > .active > a:focus {
  border-color: rgb(198,207,231);
}

.c0.content {
  background-color: #fff;
  border: 1px solid #cdcdcd;
  margin-bottom: 9px;
  border-radius: 4px;
}

.c1 {
  margin-bottom: 15px;
}

.c2 {
  padding: 7px;
}

@media (min-width:768px) {
  .c4.nav.nav-justified > li > a {
    border-bottom-color: rgb(198,207,231);
  }

  .c4.nav.nav-justified > .active > a,
  .c4.nav.nav-justified > .active > a:hover,
  .c4.nav.nav-justified > .active > a:focus {
    border-bottom-color: #ffffff;
  }
}

<Wizard
  NavigationComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "STYLES": Array [
        "tabs",
        "pills",
      ],
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "baseHash": -110015796,
        "componentId": "Nav-dzawzr-0",
        "isStatic": false,
        "rules": Array [
          [Function],
        ],
        "staticRulesId": "",
      },
      "displayName": "Nav",
      "foldedComponentIds": Array [],
      "render": [Function],
      "shouldForwardProp": undefined,
      "styledComponentId": "Nav-dzawzr-0",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  containerClassName="content"
  hidePreviousNextButtons={false}
  horizontal={true}
  justified={false}
  onStepChange={[Function]}
  steps={
    Array [
      Object {
        "component": <div>
          Component1
        </div>,
        "key": "Key1",
        "title": "Title1",
      },
      Object {
        "component": <div>
          Component2
        </div>,
        "key": "Key2",
        "title": "Title2",
      },
      Object {
        "component": <div>
          Component3
        </div>,
        "key": "Key3",
        "title": "Title3",
      },
    ]
  }
>
  <Row
    className="content"
  >
    <Row
      bsClass="row"
      className="c0 content"
      componentClass="div"
    >
      <div
        className="c0 content row"
      >
        <Wizard__HorizontalCol
          sm={12}
        >
          <Col
            bsClass="col"
            className="c1"
            componentClass="div"
            sm={12}
          >
            <div
              className="c1 col-sm-12"
            >
              <div
                className="pull-right"
              >
                <Wizard__HorizontalButtonToolbar>
                  <ButtonToolbar
                    bsClass="btn-toolbar"
                    className="c2"
                  >
                    <div
                      className="c2 btn-toolbar"
                      role="toolbar"
                    >
                      <Button
                        bsSize="xsmall"
                        bsStyle="info"
                        disabled={true}
                        onClick={[Function]}
                      >
                        <Button
                          active={false}
                          block={false}
                          bsClass="btn"
                          bsSize="xsmall"
                          bsStyle="info"
                          className="c3"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <button
                            className="c3 btn btn-xs btn-info"
                            disabled={true}
                            onClick={[Function]}
                            type="button"
                          >
                            <Icon
                              name="caret-left"
                              type="solid"
                            >
                              <FontAwesomeIcon
                                icon={
                                  Object {
                                    "iconName": "caret-left",
                                    "prefix": "fas",
                                  }
                                }
                              >
                                <svg
                                  className="svg-inline--fa fa-caret-left"
                                />
                              </FontAwesomeIcon>
                            </Icon>
                          </button>
                        </Button>
                      </Button>
                      <Button
                        bsSize="xsmall"
                        bsStyle="info"
                        onClick={[Function]}
                      >
                        <Button
                          active={false}
                          block={false}
                          bsClass="btn"
                          bsSize="xsmall"
                          bsStyle="info"
                          className="c3"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <button
                            className="c3 btn btn-xs btn-info"
                            disabled={false}
                            onClick={[Function]}
                            type="button"
                          >
                            <Icon
                              name="caret-right"
                              type="solid"
                            >
                              <FontAwesomeIcon
                                icon={
                                  Object {
                                    "iconName": "caret-right",
                                    "prefix": "fas",
                                  }
                                }
                              >
                                <svg
                                  className="svg-inline--fa fa-caret-right"
                                />
                              </FontAwesomeIcon>
                            </Icon>
                          </button>
                        </Button>
                      </Button>
                    </div>
                  </ButtonToolbar>
                </Wizard__HorizontalButtonToolbar>
              </div>
              <Nav
                activeKey="Key1"
                bsStyle="pills"
                justified={false}
                onSelect={[Function]}
              >
                <Nav
                  activeKey="Key1"
                  bsClass="nav"
                  bsStyle="pills"
                  className="c4"
                  justified={false}
                  onSelect={[Function]}
                  pullLeft={false}
                  pullRight={false}
                  stacked={false}
                >
                  <ul
                    className="c4 nav nav-pills"
                    role={null}
                  >
                    <NavItem
                      active={true}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key1"
                      key=".$Key1"
                      onSelect={[Function]}
                    >
                      <li
                        className="active"
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title1
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key2"
                      key=".$Key2"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title2
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key3"
                      key=".$Key3"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title3
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                  </ul>
                </Nav>
              </Nav>
            </div>
          </Col>
        </Wizard__HorizontalCol>
        <Col
          bsClass="col"
          componentClass="div"
          md={7}
        >
          <div
            className="col-md-7"
          >
            <div>
              Component1
            </div>
          </div>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={5}
        >
          <div
            className="col-md-5"
          >
            <span>
              Preview
            </span>
          </div>
        </Col>
      </div>
    </Row>
  </Row>
</Wizard>
`;

exports[`<Wizard /> should render with 3 steps 1`] = `
.c3.btn-info {
  background-color: #7894ce;
  border-color: #0063be;
  color: rgb(250,251,253);
  -webkit-transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
}

.c3.btn-info:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c3.btn-info.active {
  background-color: #0063be;
  border-color: #0057a8;
  color: rgb(249,250,252);
}

.c3.btn-info.active:hover {
  background-color: #0057a8;
  border-color: #00427f;
  color: rgb(249,249,251);
}

.c3.btn-info[disabled],
.c3.btn-info.disabled {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
  cursor: not-allowed;
}

.c3.btn-info[disabled]:hover,
.c3.btn-info.disabled:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c2.nav > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.c2.nav > li > a:hover,
.c2.nav > li > a:focus {
  background-color: #f3f3f3;
}

.c2.nav > li.disabled > a {
  color: #a6a6a6;
}

.c2.nav > li.disabled > a:hover,
.c2.nav > li.disabled > a:focus {
  color: #a6a6a6;
}

.c2.nav .open > a,
.c2.nav .open > a:hover,
.c2.nav .open > a:focus {
  background-color: #f3f3f3;
  border-color: #702785;
}

.c2.nav.nav-pills > li.active > a,
.c2.nav.nav-pills > li.active > a:hover,
.c2.nav.nav-pills > li.active > a:focus {
  color: #fff;
  background-color: #702785;
}

.c2.nav .nav-tabs {
  border-bottom-color: rgb(198,207,231);
}

.c2.nav .nav-tabs > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #1f1f1f;
  border-color: #f3f3f3 #f3f3f3 rgb(198,207,231);
}

.c2.nav .nav-tabs > li > a:hover {
  background-color: #f3f3f3;
  color: #1f1f1f;
}

.c2.nav .nav-tabs > li.active > a,
.c2.nav .nav-tabs > li.active > a:hover,
.c2.nav .nav-tabs > li.active > a:focus {
  color: #1f1f1f;
  background-color: #ffffff;
  border-color: rgb(198,207,231);
  border-bottom-color: transparent;
}

.c2.nav .nav-tabs > li.disabled > a,
.c2.nav .nav-tabs > li.disabled > a:hover,
.c2.nav .nav-tabs > li.disabled > a:focus {
  color: #9b9b9b;
  background-color: #ffffff;
  border-color: #ffffff #ffffff rgb(198,207,231);
  cursor: not-allowed;
}

.c2.nav.nav-justified > .active > a,
.c2.nav.nav-justified > .active > a:hover,
.c2.nav.nav-justified > .active > a:focus {
  border-color: rgb(198,207,231);
}

.c0.content {
  background-color: #fff;
  border: 1px solid #cdcdcd;
  margin-bottom: 9px;
  border-radius: 4px;
}

.c1 {
  border-right: #cdcdcd solid 1px;
}

@media (min-width:768px) {
  .c2.nav.nav-justified > li > a {
    border-bottom-color: rgb(198,207,231);
  }

  .c2.nav.nav-justified > .active > a,
  .c2.nav.nav-justified > .active > a:hover,
  .c2.nav.nav-justified > .active > a:focus {
    border-bottom-color: #ffffff;
  }
}

<Wizard
  NavigationComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "STYLES": Array [
        "tabs",
        "pills",
      ],
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "baseHash": -110015796,
        "componentId": "Nav-dzawzr-0",
        "isStatic": false,
        "rules": Array [
          [Function],
        ],
        "staticRulesId": "",
      },
      "displayName": "Nav",
      "foldedComponentIds": Array [],
      "render": [Function],
      "shouldForwardProp": undefined,
      "styledComponentId": "Nav-dzawzr-0",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  containerClassName="content"
  hidePreviousNextButtons={false}
  horizontal={false}
  justified={false}
  onStepChange={[Function]}
  steps={
    Array [
      Object {
        "component": <div>
          Component1
        </div>,
        "key": "Key1",
        "title": "Title1",
      },
      Object {
        "component": <div>
          Component2
        </div>,
        "key": "Key2",
        "title": "Title2",
      },
      Object {
        "component": <div>
          Component3
        </div>,
        "key": "Key3",
        "title": "Title3",
      },
    ]
  }
>
  <Row
    className="content"
  >
    <Row
      bsClass="row"
      className="c0 content"
      componentClass="div"
    >
      <div
        className="c0 content row"
      >
        <Wizard__SubnavigationCol
          md={2}
        >
          <Col
            bsClass="col"
            className="c1"
            componentClass="div"
            md={2}
          >
            <div
              className="c1 col-md-2"
            >
              <Nav
                activeKey="Key1"
                bsStyle="pills"
                justified={false}
                onSelect={[Function]}
                stacked={true}
              >
                <Nav
                  activeKey="Key1"
                  bsClass="nav"
                  bsStyle="pills"
                  className="c2"
                  justified={false}
                  onSelect={[Function]}
                  pullLeft={false}
                  pullRight={false}
                  stacked={true}
                >
                  <ul
                    className="c2 nav nav-pills nav-stacked"
                    role={null}
                  >
                    <NavItem
                      active={true}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key1"
                      key=".$Key1"
                      onSelect={[Function]}
                    >
                      <li
                        className="active"
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title1
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key2"
                      key=".$Key2"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title2
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key3"
                      key=".$Key3"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title3
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                  </ul>
                </Nav>
              </Nav>
              <br />
              <Row>
                <Row
                  bsClass="row"
                  className="c0"
                  componentClass="div"
                >
                  <div
                    className="c0 row"
                  >
                    <Col
                      bsClass="col"
                      componentClass="div"
                      xs={6}
                    >
                      <div
                        className="col-xs-6"
                      >
                        <Button
                          bsSize="small"
                          bsStyle="info"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <Button
                            active={false}
                            block={false}
                            bsClass="btn"
                            bsSize="small"
                            bsStyle="info"
                            className="c3"
                            disabled={true}
                            onClick={[Function]}
                          >
                            <button
                              className="c3 btn btn-sm btn-info"
                              disabled={true}
                              onClick={[Function]}
                              type="button"
                            >
                              Previous
                            </button>
                          </Button>
                        </Button>
                      </div>
                    </Col>
                    <Col
                      bsClass="col"
                      className="text-right"
                      componentClass="div"
                      xs={6}
                    >
                      <div
                        className="text-right col-xs-6"
                      >
                        <Button
                          bsSize="small"
                          bsStyle="info"
                          onClick={[Function]}
                        >
                          <Button
                            active={false}
                            block={false}
                            bsClass="btn"
                            bsSize="small"
                            bsStyle="info"
                            className="c3"
                            disabled={false}
                            onClick={[Function]}
                          >
                            <button
                              className="c3 btn btn-sm btn-info"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              Next
                            </button>
                          </Button>
                        </Button>
                      </div>
                    </Col>
                  </div>
                </Row>
              </Row>
            </div>
          </Col>
        </Wizard__SubnavigationCol>
        <Col
          bsClass="col"
          componentClass="div"
          md={10}
        >
          <div
            className="col-md-10"
          >
            <div>
              Component1
            </div>
          </div>
        </Col>
      </div>
    </Row>
  </Row>
</Wizard>
`;

exports[`<Wizard /> should render with 3 steps and children 1`] = `
.c3.btn-info {
  background-color: #7894ce;
  border-color: #0063be;
  color: rgb(250,251,253);
  -webkit-transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out,border 150ms ease-in-out,color 150ms ease-in-out;
}

.c3.btn-info:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c3.btn-info.active {
  background-color: #0063be;
  border-color: #0057a8;
  color: rgb(249,250,252);
}

.c3.btn-info.active:hover {
  background-color: #0057a8;
  border-color: #00427f;
  color: rgb(249,249,251);
}

.c3.btn-info[disabled],
.c3.btn-info.disabled {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
  cursor: not-allowed;
}

.c3.btn-info[disabled]:hover,
.c3.btn-info.disabled:hover {
  background-color: #bdc8e4;
  border-color: #7894ce;
  color: rgb(42,45,51);
}

.c2.nav > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
}

.c2.nav > li > a:hover,
.c2.nav > li > a:focus {
  background-color: #f3f3f3;
}

.c2.nav > li.disabled > a {
  color: #a6a6a6;
}

.c2.nav > li.disabled > a:hover,
.c2.nav > li.disabled > a:focus {
  color: #a6a6a6;
}

.c2.nav .open > a,
.c2.nav .open > a:hover,
.c2.nav .open > a:focus {
  background-color: #f3f3f3;
  border-color: #702785;
}

.c2.nav.nav-pills > li.active > a,
.c2.nav.nav-pills > li.active > a:hover,
.c2.nav.nav-pills > li.active > a:focus {
  color: #fff;
  background-color: #702785;
}

.c2.nav .nav-tabs {
  border-bottom-color: rgb(198,207,231);
}

.c2.nav .nav-tabs > li > a {
  -webkit-transition: background-color 150ms ease-in-out;
  transition: background-color 150ms ease-in-out;
  color: #1f1f1f;
  border-color: #f3f3f3 #f3f3f3 rgb(198,207,231);
}

.c2.nav .nav-tabs > li > a:hover {
  background-color: #f3f3f3;
  color: #1f1f1f;
}

.c2.nav .nav-tabs > li.active > a,
.c2.nav .nav-tabs > li.active > a:hover,
.c2.nav .nav-tabs > li.active > a:focus {
  color: #1f1f1f;
  background-color: #ffffff;
  border-color: rgb(198,207,231);
  border-bottom-color: transparent;
}

.c2.nav .nav-tabs > li.disabled > a,
.c2.nav .nav-tabs > li.disabled > a:hover,
.c2.nav .nav-tabs > li.disabled > a:focus {
  color: #9b9b9b;
  background-color: #ffffff;
  border-color: #ffffff #ffffff rgb(198,207,231);
  cursor: not-allowed;
}

.c2.nav.nav-justified > .active > a,
.c2.nav.nav-justified > .active > a:hover,
.c2.nav.nav-justified > .active > a:focus {
  border-color: rgb(198,207,231);
}

.c0.content {
  background-color: #fff;
  border: 1px solid #cdcdcd;
  margin-bottom: 9px;
  border-radius: 4px;
}

.c1 {
  border-right: #cdcdcd solid 1px;
}

@media (min-width:768px) {
  .c2.nav.nav-justified > li > a {
    border-bottom-color: rgb(198,207,231);
  }

  .c2.nav.nav-justified > .active > a,
  .c2.nav.nav-justified > .active > a:hover,
  .c2.nav.nav-justified > .active > a:focus {
    border-bottom-color: #ffffff;
  }
}

<Wizard
  NavigationComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "STYLES": Array [
        "tabs",
        "pills",
      ],
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "baseHash": -110015796,
        "componentId": "Nav-dzawzr-0",
        "isStatic": false,
        "rules": Array [
          [Function],
        ],
        "staticRulesId": "",
      },
      "displayName": "Nav",
      "foldedComponentIds": Array [],
      "render": [Function],
      "shouldForwardProp": undefined,
      "styledComponentId": "Nav-dzawzr-0",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  containerClassName="content"
  hidePreviousNextButtons={false}
  horizontal={false}
  justified={false}
  onStepChange={[Function]}
  steps={
    Array [
      Object {
        "component": <div>
          Component1
        </div>,
        "key": "Key1",
        "title": "Title1",
      },
      Object {
        "component": <div>
          Component2
        </div>,
        "key": "Key2",
        "title": "Title2",
      },
      Object {
        "component": <div>
          Component3
        </div>,
        "key": "Key3",
        "title": "Title3",
      },
    ]
  }
>
  <Row
    className="content"
  >
    <Row
      bsClass="row"
      className="c0 content"
      componentClass="div"
    >
      <div
        className="c0 content row"
      >
        <Wizard__SubnavigationCol
          md={2}
        >
          <Col
            bsClass="col"
            className="c1"
            componentClass="div"
            md={2}
          >
            <div
              className="c1 col-md-2"
            >
              <Nav
                activeKey="Key1"
                bsStyle="pills"
                justified={false}
                onSelect={[Function]}
                stacked={true}
              >
                <Nav
                  activeKey="Key1"
                  bsClass="nav"
                  bsStyle="pills"
                  className="c2"
                  justified={false}
                  onSelect={[Function]}
                  pullLeft={false}
                  pullRight={false}
                  stacked={true}
                >
                  <ul
                    className="c2 nav nav-pills nav-stacked"
                    role={null}
                  >
                    <NavItem
                      active={true}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key1"
                      key=".$Key1"
                      onSelect={[Function]}
                    >
                      <li
                        className="active"
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title1
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key2"
                      key=".$Key2"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title2
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                    <NavItem
                      active={false}
                      activeKey="Key1"
                      disabled={false}
                      eventKey="Key3"
                      key=".$Key3"
                      onSelect={[Function]}
                    >
                      <li
                        className=""
                        role="presentation"
                      >
                        <SafeAnchor
                          componentClass="a"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="button"
                          >
                            Title3
                          </a>
                        </SafeAnchor>
                      </li>
                    </NavItem>
                  </ul>
                </Nav>
              </Nav>
              <br />
              <Row>
                <Row
                  bsClass="row"
                  className="c0"
                  componentClass="div"
                >
                  <div
                    className="c0 row"
                  >
                    <Col
                      bsClass="col"
                      componentClass="div"
                      xs={6}
                    >
                      <div
                        className="col-xs-6"
                      >
                        <Button
                          bsSize="small"
                          bsStyle="info"
                          disabled={true}
                          onClick={[Function]}
                        >
                          <Button
                            active={false}
                            block={false}
                            bsClass="btn"
                            bsSize="small"
                            bsStyle="info"
                            className="c3"
                            disabled={true}
                            onClick={[Function]}
                          >
                            <button
                              className="c3 btn btn-sm btn-info"
                              disabled={true}
                              onClick={[Function]}
                              type="button"
                            >
                              Previous
                            </button>
                          </Button>
                        </Button>
                      </div>
                    </Col>
                    <Col
                      bsClass="col"
                      className="text-right"
                      componentClass="div"
                      xs={6}
                    >
                      <div
                        className="text-right col-xs-6"
                      >
                        <Button
                          bsSize="small"
                          bsStyle="info"
                          onClick={[Function]}
                        >
                          <Button
                            active={false}
                            block={false}
                            bsClass="btn"
                            bsSize="small"
                            bsStyle="info"
                            className="c3"
                            disabled={false}
                            onClick={[Function]}
                          >
                            <button
                              className="c3 btn btn-sm btn-info"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              Next
                            </button>
                          </Button>
                        </Button>
                      </div>
                    </Col>
                  </div>
                </Row>
              </Row>
            </div>
          </Col>
        </Wizard__SubnavigationCol>
        <Col
          bsClass="col"
          componentClass="div"
          md={7}
        >
          <div
            className="col-md-7"
          >
            <div>
              Component1
            </div>
          </div>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={3}
        >
          <div
            className="col-md-3"
          >
            <span>
              Preview
            </span>
          </div>
        </Col>
      </div>
    </Row>
  </Row>
</Wizard>
`;
